# bare-steel

./: Cargo.toml  README.md
.cargo/: config.toml
simple_boot/: Cargo.toml
src/: allocator.rs  ansi.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  pit.rs  serial.rs  task.rs  vga.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs  timer.rs  timer_.rs
src/task/timer/: mod.rs  pit.rs
src/vga/: ansi.rs  mod.rs
src/vga/text/: mod.rs  writer.rs
tests/: ansi_codes.rs  basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
