[package]
name = "basic_example"
version = "0.1.0"
authors = ["jaymzee <jaymzee@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "simple_boot"
]

[dependencies]
bootloader = "0.10.8"
